2004-10-14  S. P. Hirshman

	* output-emf.c:

	Added #define ENMT_DELETEOBJECT 40 
	to define DeleteObject in Metafile dc

	Added routine WriteDeleteObject to delete pens/brushes after they
	are deselected out of the metafile dc (prevents resource depletion).

	Rewrote GetEmfStats, OutputEmf routines to call WriteDeleteObject whenever
	a pen/brush is deselected out of the dc. Also, modified the outer loop over
	splines so that each new spline starts a new path bracket. Previously, if
	the next color was the same as the previous spline's color, a new path was
	NOT started. I needed this for my applique application, but it also follows the
	philosophy of eps files which stroke/fill each new spline.

2004-05-01  Henning Makholm <henning@makholm.net>

	* configure.in: Updated for ImageMagick 6.0.0.

2004-05-01  Masatake YAMATO  <yamato@redhat.com>

	* configure.in: Comment out popt check.

	* autotrace.pc.in (Libs): Added @GLIB2_LIBS@.

	* autotrace-config.af: Added @GLIB2_LIBS@ to AF_DEF_LIBS.

2004-02-26  Henning Makholm <henning@makholm.net>

	* README: Added missing comma in the sample code.

2004-01-05  Masatake YAMATO  <yamato@redhat.com>

	* autotrace.h(enum _at_msg_type): Applied a patch
	#843475 at sourceforge's patch tracker.

	Jon A. Cruz:
	Can't forward declare enums                                                                       
	when compiling with g++ (as when trying to include                                                
	autotrace or frontline support), it errors out on                                                 
	typedefs of enums that occurr before the enum                                                     
	declarations themselves.                                                                          	

2003-08-17  Masatake YAMATO  <yamato@redhat.com>

	* autotrace.c (at_time_string): check the value of
	`debug'.

	* *(*): bitmap_type and related macros are removed.
	Use at_bitmap. at_bitmap_type is renamed to at_bitmap.
