@@ -1,0 +1,34 @@
+/* output-plt.h --- output in HPGL (plt) format
+
+   Copyright (C) 2004 Steven P. Hirshman
+
+   This library is free software; you can redistribute it and/or
+   modify it under the terms of the GNU Lesser General Public License
+   as published by the Free Software Foundation; either version 2.1 of
+   the License, or (at your option) any later version.
+
+   This library is distributed in the hope that it will be useful, but
+   WITHOUT ANY WARRANTY; without even the implied warranty of
+   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+   Lesser General Public License for more details.
+
+   You should have received a copy of the GNU Lesser General Public
+   License along with this library; if not, write to the Free Software
+   Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307
+   USA. */
+
+#ifndef __OUTPUT_PLT_H
+#define __OUTPUT_PLT_H
+
+#include "output.h"
+
+int output_plt_writer(FILE* file, gchar* name,
+		      int llx, int lly, int urx, int ury, 
+		      at_output_opts_type * opts,
+		      at_spline_list_array_type shape,
+		      at_msg_func msg_func, 
+		      gpointer msg_data,
+		      gpointer user_data);
+
+
+#endif /* __OUTPUT_PLT_H */
